update guard api added
